添加新建网点

--- a/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
+++ b/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
@@ -16,6 +16,7 @@
             <mp-cell value="计划完成时间" footer="{{inspectionDetail.days}}天"></mp-cell>
             <mp-cell value="巡检内容" footer="{{xxxx}}"></mp-cell>
             <mp-cell value="巡检备注" footer="{{inspectionDetail.remark}}"></mp-cell>
+            <mp-cell value="巡检设备集" footer="{{inspectionDetail.content}}"></mp-cell>
             <mp-cell value="甲方负责人" footer="{{principalDetail.userName}}"></mp-cell>
             <mp-cell value="联系电话" footer="{{principalDetail.mobileNo}}" data-phone="{{principalDetail.mobileNo}}" bindtap="clickPhoneCall"></mp-cell>
             <mp-cell value="服务商" footer="{{companyDetail.groupName}}"></mp-cell>
