--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -52,6 +52,47 @@
   </view>
 </template>
 
+<!--新增网点弹窗-->
+<template name="addNetwork">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
+  <view class="modal-dialog" wx:if="{{showEdit}}">
+    <view class="modal-title">{{content.title}}</view>
+    <view class="drawer_content"> 
+      <view class="top grid"> 
+        <label class="title col-0">网点名称</label> 
+        <input class="input_base input_h30 col-1" name="networkName" type="text" maxlength="20" focus="true" bindinput="inputChange1" placeholder="{{content.placeholder1}}"></input> 
+      </view> 
+      <view class="top grid"> 
+        <label class="title col-0">设备</label> 
+        <input class="input_base input_h30 col-1" name="networkDevice" type="text" maxlength="20" bindinput="inputChange2" placeholder="{{content.placeholder2}}"></input> 
+      </view> 
+      <view class="top grid"> 
+        <label class="title col-0">网点描述</label> 
+        <input class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindinput="inputChange3" placeholder="{{content.placeholder3}}"></input> 
+      </view>
+      <view class="top grid"> 
+        <label class="title col-0">上传图片</label> 
+        <view class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindtap="clickUploadImg">点击上传</view> 
+      </view> 
+ </view> 
+    <!-- <view class="modal-content">
+      <view class="modal-input">
+        <input placeholder-class="input-holder" type="text" maxlength="20" focus="true" bindinput="inputChange" class="input" placeholder="{{content.placeholder}}"></input>
+      </view>
+      <view class="modal-input">
+        <input placeholder-class="input-holder" type="text" maxlength="20" focus="true" bindinput="inputChange" class="input" placeholder="{{content.placeholder}}"></input>
+      </view>
+      <view class="modal-input">
+        <input placeholder-class="input-holder" type="text" maxlength="20" focus="true" bindinput="inputChange" class="input" placeholder="{{content.placeholder}}"></input>
+      </view>
+    </view> -->
+    <view class="modal-footer">
+      <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+      <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
+    </view>
+  </view>
+</template>
+
 <!-- 添加备品备件-->
 <template name="onAddSpareParts">
   <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showSpareParts}}"></view>
