--- a/page/home/pages/terminalUser/repair/repair.wxml
+++ b/page/home/pages/terminalUser/repair/repair.wxml
@@ -112,6 +112,26 @@
           </view>
         </view>
       </view>
+      <!--日期选择器-->
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">截止时间</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindEndDateChange">
+                <view class="weui-input">{{endDate}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{endTime}}" start="09:01" end="21:01" bindchange="bindEndTimeChange">
+                <view class="weui-input">{{endTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>
 
       <!--故障定位栏-->
       <view class="page-section">
