--- a/page/home/pages/invoice/invoice.wxss
+++ b/page/home/pages/invoice/invoice.wxss
@@ -1,3 +1,4 @@
+/* page/home/pages/invoice/invoice.wxss */
 @import '../../../common/lib/common.wxss';
 @import '../../../common/lib/weui2.wxss';
 @import "../../../common/modal/modal-tpl.wxss";
