--- a/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
+++ b/page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail.wxml
@@ -4,7 +4,7 @@
     {{itemName}}
   </view>
 </view>
-<!-- tabbar对应的内容 -->.
+<!-- tabbar对应的内容 -->
 <view>
   <view class="ctnt1 placehold" hidden="{{currentNavtab==0 ? '' : true}}">
     <view class="page__bd">
@@ -14,9 +14,14 @@
             <mp-cell value="巡检周期" footer="{{inspectionDetail.frequency}}天"></mp-cell>
             <mp-cell value="开始时间" footer="{{inspectionDetail.scheduledStartTime}}"></mp-cell>
             <mp-cell value="计划完成时间" footer="{{inspectionDetail.days}}天"></mp-cell>
-            <mp-cell value="巡检内容" footer="{{xxxx}}"></mp-cell>
-            <mp-cell value="巡检备注" footer="{{inspectionDetail.remark}}"></mp-cell>
-            <mp-cell value="巡检设备集" footer="{{inspectionDetail.content}}"></mp-cell>
+            <mp-cell value="巡检内容" footer="{{inspectionDetail.content}}"></mp-cell>
+            <!-- <mp-cell value="实际开始时间" footer="{{inspectionDetail.content}}"></mp-cell> -->
+            <mp-cell value="实际完成时间" footer="{{inspectionDetail.actualFinishTime}}"></mp-cell>
+            <mp-cell value="应巡检点位数" footer="{{inspectionDetail.pointSum}}"></mp-cell>
+            <mp-cell value="已安排点位数" footer="{{inspectionDetail.alreadyPoint}}"></mp-cell>
+            <mp-cell value="过程相关费用" footer="{{inspectionDetail.totalCost}}"></mp-cell>
+            <mp-cell value="任务其他描述" footer="{{inspectionDetail.remark}}"></mp-cell>
+            <!-- <mp-cell value="巡检备注" footer="{{inspectionDetail.remark}}"></mp-cell> -->
             <mp-cell value="甲方负责人" footer="{{principalDetail.userName}}"></mp-cell>
             <mp-cell value="联系电话" footer="{{principalDetail.mobileNo}}" data-phone="{{principalDetail.mobileNo}}" bindtap="clickPhoneCall"></mp-cell>
             <mp-cell value="服务商" footer="{{companyDetail.groupName}}"></mp-cell>
