--- a/page/home/pages/serviceEngineer/inspecting/inspecting.wxml
+++ b/page/home/pages/serviceEngineer/inspecting/inspecting.wxml
@@ -11,7 +11,7 @@
                 <view style="font-size: 13px;color: #888888;">设备位置:{{order.malfunctionLoc}}</view>
                 <view style="font-size: 13px;color: #888888;">报修时间:{{order.scheduledStartTime}}</view>
                 <view class="operation_view">
-                  <view class="operation_button" data-id="{{order.id}}" data-index="{{index}}" catchtap="clickAccept">完成</view>
+                  <!-- <view class="operation_button" data-id="{{order.id}}" data-index="{{index}}" catchtap="clickAccept">完成</view> -->
                   <!-- <view class="operation_button" data-id="{{order.id}}" catchtap="clickNotAccept">驳回</view> -->
                 </view>
             </mp-cell>
