--- a/page/home/pages/serviceProvider/networkDistribute/networkDistribute.wxml
+++ b/page/home/pages/serviceProvider/networkDistribute/networkDistribute.wxml
@@ -15,9 +15,14 @@
             <mp-cell value="巡检周期" footer="{{inspectionDetail.frequency}}天"></mp-cell>
             <mp-cell value="开始时间" footer="{{inspectionDetail.scheduledStartTime}}"></mp-cell>
             <mp-cell value="计划完成时间" footer="{{inspectionDetail.days}}天"></mp-cell>
-            <mp-cell value="巡检内容" footer="{{xxxx}}"></mp-cell>
-            <mp-cell value="巡检备注" footer="{{inspectionDetail.remark}}"></mp-cell>
-            <mp-cell value="巡检设备集" footer="{{inspectionDetail.content}}"></mp-cell>
+            <mp-cell value="巡检内容" footer="{{inspectionDetail.content}}"></mp-cell>
+            <!-- <mp-cell value="实际开始时间" footer="{{inspectionDetail.content}}"></mp-cell> -->
+            <mp-cell value="实际完成时间" footer="{{inspectionDetail.actualFinishTime}}"></mp-cell>
+            <mp-cell value="应巡检点位数" footer="{{inspectionDetail.pointSum}}"></mp-cell>
+            <mp-cell value="已安排点位数" footer="{{inspectionDetail.alreadyPoint}}"></mp-cell>
+            <mp-cell value="过程相关费用" footer="{{inspectionDetail.totalCost}}"></mp-cell>
+            <mp-cell value="任务其他描述" footer="{{inspectionDetail.remark}}"></mp-cell>
+            <!-- <mp-cell value="巡检备注" footer="{{inspectionDetail.remark}}"></mp-cell> -->
             <mp-cell value="甲方负责人" footer="{{principalDetail.userName}}"></mp-cell>
             <mp-cell value="联系电话" footer="{{principalDetail.mobileNo}}" data-phone="{{principalDetail.mobileNo}}" bindtap="clickPhoneCall"></mp-cell>
             <mp-cell value="服务商" footer="{{companyDetail.groupName}}"></mp-cell>
@@ -67,8 +72,8 @@
             <mp-cell value="故障类别" footer="{{}}"></mp-cell>
             <mp-cell value="故障描述" footer="{{}}"></mp-cell>
         </mp-cells> -->
-      <view class='add_btn' bindtap="clickAddNetwork">
-        <button class='btn'>新增网点</button>
+      <view wx:if="{{isAdditional}}" class='add_btn' bindtap="clickAddNetwork">
+        <button class='btn'>新增点位</button>
       </view>
     </view>
   </view>
