--- a/page/home/pages/terminalUser/inspectionToBeVerify/inspectionToBeVerify.wxml
+++ b/page/home/pages/terminalUser/inspectionToBeVerify/inspectionToBeVerify.wxml
@@ -13,6 +13,7 @@
                 <view class="operation_view">
                   <view class="operation_button" data-id="{{order.id}}" data-idx="{{index}}" catchtap="clickAccept">通过</view>
                   <view class="operation_button" data-id="{{order.id}}" data-idx="{{index}}" catchtap="clickNotAccept">驳回</view>
+                  <view class="operation_button" data-id="{{order.id}}" data-idx="{{index}}" catchtap="clickDelete">删除</view>
                 </view>
             </mp-cell>
         </mp-cells>
