--- a/page/common/modal/modal-tpl.wxml
+++ b/page/common/modal/modal-tpl.wxml
@@ -97,6 +97,62 @@
   </view>
 </template>
 
+<!--工程师完成巡检弹窗-->
+<template name="completeInspection">
+  <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showEdit}}"></view>
+  <view class="modal-dialog" wx:if="{{showEdit}}">
+    <view class="modal-title">{{content.title}}</view>
+    <view class="drawer_content"> 
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleStartDate}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.startDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindStartDateChange">
+                <view class="weui-input">{{content.startDate}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.startTime}}" bindchange="bindStartTimeChange">
+                <view class="weui-input">{{content.startTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>
+      <view class="page-section">
+        <view class="weui-cells weui-cells_after-title">
+          <view class="weui-cell weui-cell_input">
+            <view class="weui-cell__hd">
+              <view class="weui-label">{{content.subTitleEndDate}}</view>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="date" value="{{content.endDate}}" start="2015-09-01" end="2100-09-01" bindchange="bindEndDateChange">
+                <view class="weui-input">{{content.endDate}}</view>
+              </picker>
+            </view>
+            <view class="weui-cell__bd">
+              <picker mode="time" value="{{content.endTime}}" bindchange="bindEndTimeChange">
+                <view class="weui-input">{{content.endTime}}</view>
+              </picker>
+            </view>
+          </view>
+        </view>
+      </view>    
+      <view class="top grid"> 
+        <label class="title col-0">上传图片</label> 
+        <view class="input_base input_h30 col-1" name="networkScrib" type="text" maxlength="100" bindtap="clickUploadImg">点击上传</view> 
+      </view> 
+ </view> 
+    <view class="modal-footer">
+      <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+      <view class="btn-confirm" bindtap="confirmInput" data-status="confirm">确定</view>
+    </view>
+  </view>
+</template>
+
 <!-- 添加备品备件-->
 <template name="onAddSpareParts">
   <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showSpareParts}}"></view>
