--- a/page/common/modal/modal-tpl.wxss
+++ b/page/common/modal/modal-tpl.wxss
@@ -1,3 +1,4 @@
+@import "../../common/lib/weui.wxss";
 .modal-mask {
   width: 100%;
   height: 100%;
@@ -260,3 +261,17 @@ radio{
 .col-1 {-webkit-box-flex:1;box-flex:1;} 
 .fl { float: left;} 
 .fr { float: right;}
+.picker{
+  padding: 19rpx 26rpx;
+  background-color: #FFFFFF;
+}
+.img-choose{
+  width: 47rpx;
+  padding: 3rpx;
+  height: 50rpx;
+}
+.img-list{
+  width: 35rpx;
+  padding: 3rpx;
+  height: 35rpx;
+}
